# fitl

./: .gitignore  404.html  404.md  CNAME  LICENSE  README.md  global.css  index.html
.githooks/: pre-commit
.github/workflows/: version-sync.yml
FiTL/: Cargo.toml  README.md
FiTL/Prototype/Python/: parsing.py
FiTL/src/: compile.rs  data_structures.rs  filter.rs  lib.rs  table.rs  tokenize.rs
PlaygroundUI/: package.json  pnpm-lock.yaml  rollup.config.js
PlaygroundUI/src/: App.svelte  DataTable.svelte  utils.js
PublicSite/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
PublicSite/src/: app.css  app.html
PublicSite/src/lib/: utils.ts
PublicSite/src/routes/: +layout.svelte  +page.svelte  app.css  main.js
PublicSite/static/: CNAME
Python/: parsing.py
Rust/USQL/: Cargo.toml
Rust/USQL/src/: compile.rs  data_structures.rs  filter.rs  lib.rs  table.rs  tokenize.rs
_app/: version.json
_app/immutable/assets/: 0.B2YgBBIQ.css  0.Bw95mZSg.css  0.D9f3xOrz.css  0.HG62yEb1.css  5.CS6wfz3G.css  7.BNBB_SeW.css  7.CCxIRyz8.css  DataTable.C-RubhV0.css  DataTable.CbCuJRnx.css  DataTable.liNzSQjp.css  FoodExample.BMcxsScK.css  FoodExample.C-cPwLsz.css  FoodExample.DFezeqDs.css  Help.CJGysf7S.css  _layout.BNIRBbdb.css  _layout.BqkvSsVY.css  _layout.CEo9F2X2.css  _layout.CFXH1TEF.css  _layout.CoLj2480.css  _page.BykKWNw8.css  _page.CRQadRkN.css  _page.CWDrliCM.css  _page.CYrUKSy3.css  _page.mSLRgB1g.css  app.BIE6OCCK.css  app.BvVSg3RZ.css  app.CzrWal1D.css  app.Da7EecML.css  app.DkjIbDJZ.css  app.DscXzree.css
_app/immutable/chunks/: DataTable.BF6o8oPD.js  DataTable.B_gHcX9I.js  DataTable.BcTSWsPR.js  DataTable.CHGjtvBH.js  DataTable.CM4L9uCr.js  DataTable.DA0lLyij.js  DataTable.qF5KbdkX.js  FoodExample.BO_D4UmV.js  FoodExample.BbnYm9jX.js  FoodExample.C3riQTTi.js  FoodExample.CKXtO_qd.js  FoodExample.D1OUIUIi.js  FoodExample.D99GtVb4.js  FoodExample.DCbU8dDU.js  FoodExample.q2-B8xQR.js  attributes.BqBVL9h8.js  attributes.CGjHxVOL.js  attributes.CaPm3nup.js  attributes.Cm5ak8ab.js  attributes.DWrBTU4p.js  attributes.Dk3bRcNo.js  attributes.XrBall3x.js  attributes.np55ldqT.js  disclose-version.BMbhOq8Q.js  disclose-version.BkO4L0aM.js  disclose-version.CT4FqHsS.js  disclose-version.DNmxwkMI.js  disclose-version.H0UT25UQ.js  disclose-version.mL42o9Kk.js  disclose-version.q5bePwqQ.js  entry.7LQRzLk3.js  entry.82Kah-cE.js  entry.B7vX_9pq.js  entry.BONWzt02.js  entry.BOgH0KY1.js  entry.C1odlh_c.js  entry.C28DpTXW.js  entry.C7g52vGC.js  entry.CIAZ5xhw.js  entry.Cp4_Qe4d.js  (+101 more)
_app/immutable/entry/: app.AShbjwrf.js  app.B69dW0zg.js  app.BE_h3a43.js  app.BVZsWvNK.js  app.BWQqyMsN.js  app.BYxDWb_k.js  app.Bld0_40e.js  app.CPZaZBOi.js  app.CWAmxaUM.js  app.CXD7-Zc2.js  app.Coj9GQUO.js  app.DajBKfvt.js  app.Dc0OVm92.js  app.Dn7WdMPj.js  app.Dnoo9it3.js  app.GtBKOVfg.js  app.IXtrkjn4.js  app.L51yVtqi.js  app.sGH-YcQD.js  start.BDAX_cZp.js  start.BIp4sSiR.js  start.BVpHHFmn.js  start.BZp0NqWP.js  start.BfVJVdVH.js  start.BgL9kIIs.js  start.CFmID-0N.js  start.Cy9yEzC7.js  start.D9sF1zkK.js  start.DlYNvjVE.js  start.DnmMN2lr.js  start.DqZq2-cZ.js  start.DyygS7z7.js  (+6 more)
about/: index.html
fitl-js/: README.md  fitl-wasm.wasm.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
fitl-js/fitl-wasm/: .gitignore  Cargo.toml  LICENSE_MIT  README.md  test.html
fitl-js/fitl-wasm/scripts/: publish.sh
fitl-js/fitl-wasm/src/: lib.rs  utils.rs
fitl-js/scripts/: fullTest.ps1
fitl-js/src/: index.test.ts  index.ts  utils.test.ts  utils.ts
fitl-rs/: Cargo.toml  README.md
fitl-rs/src/: compile.rs  data_structures.rs  filter.rs  lib.rs  table.rs  value_parsers.rs
fitl-rust/: Cargo.toml  README.md
fitl-rust/src/: compile.rs  data_structures.rs  filter.rs  lib.rs  table.rs  tokenize.rs
fitl-ui-example/: package-lock.json  package.json
fitl-ui-example-v1/: package.json
fitl-ui-example-v1/src/: App.svelte  Help.svelte  utils.js
fitl-ui-example-v2/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts
fitl-ui-example-v2/src/: app.html
fitl-ui-example-v2/static/: CNAME
fitl-ui-example/public/: index.html
fitl-ui-example/src/: App.svelte  DataTable.svelte  test_data.js  utils.js
fitl-wasm/: Cargo.toml  README.md  package.json
fitl-wasm/src/: lib.rs  utils.rs
food/: index.html
jsdocs/: index.html
playlist/: index.html
python/: data_structures.py  filter.py  main.py  parsing.py
queries/: index.html
(+118 files in other folders)
