[package]
name = "fitl-wasm"
version = "1.0.6"
authors = ["Slad3"]
description = "A WebAssembly package for the FilterTableQueryLanguage project."
edition = "2018"
license = "MIT"
keywords = [
        "wasm",
        "query-language",
        "tables",
        "data-filtering",
        "wasm-bindgen"
    ]

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
fitl = { path = "../fitl-rs" }
serde_json = "1.0.128"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.210", features = ["derive"] }

wee_alloc = { version = "0.4.5", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
