[package]
name = "fitl-wasm"
version = "1.0.0"
authors = ["Slad3"]
description = "A WebAssembly package for the FilterTableLanguage project."
edition = "2018"
license = "MIT"
keywords = [
        "wasm",
        "query-language",
        "tables",
        "data-filtering",
        "wasm-bindgen"
    ]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
fitl = { path = "../../fitl-rs" }
serde_json = "1.0.133"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.215", features = ["derive"] }

wee_alloc = { version = "0.4.5", optional = true }
#wasm-pack = "0.13.1"
cfg-if = "1.0.0"


[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[profile.release]
opt-level = "s"
